[package]
name = "aichangelog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
crossterm = "0.26.1"
futures = "0.3.28"
reqwest = "0.11.16"
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
terminal-supports-emoji = "0.1.3"
tiktoken-rs = "0.3.3"
tokio = { version = "1.27.0", features = ["full"] }
unicode-segmentation = "1.10.1"
